<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil_validasi_gambar"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageResultPreview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tvResultDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/btnAnalyzeLeukemia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analisis_sel_leukimia"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/blue_500"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnBackToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kembali_ke_beranda"
        android:background="@color/blue_500"
        android:textColor="@android:color/white" />
</LinearLayout>